--- a/src/MrFixIt/Views/Jobs/Claim.cshtml
+++ b/src/MrFixIt/Views/Jobs/Claim.cshtml
@@ -17,3 +17,5 @@
     <input type="submit" value="Claim This Job" />
 }
 <p>@Html.ActionLink("Back to list", "Index")</p>
+
+@*Job Can be assigned to worker*@
