--- a/src/MrFixIt/Views/Jobs/Create.cshtml
+++ b/src/MrFixIt/Views/Jobs/Create.cshtml
@@ -19,3 +19,6 @@
             <input type="submit" value="Add new job" />
         }
         <p>@Html.ActionLink("Back to list", "Index")</p>
+
+
+@*Jobs can be added to job list*@
