--- a/src/MrFixIt/Views/Workers/Create.cshtml
+++ b/src/MrFixIt/Views/Workers/Create.cshtml
@@ -28,8 +28,7 @@
             <input type="submit" value="Register" />
         }
     }
-
-
-
 </body>
 </html>
+
+@*Users may sign up to be workers*@
