--- a/src/MrFixIt/Views/Jobs/Claim.cshtml
+++ b/src/MrFixIt/Views/Jobs/Claim.cshtml
@@ -8,6 +8,7 @@
 <h2>Would you like to do this job?</h2>
 <hr />
 @using (Html.BeginForm())
+
 {
     @Html.HiddenFor(model => model.JobId)
     @Html.HiddenFor(model => model.Title)
@@ -16,6 +17,6 @@
     <h4>@Model.Title</h4>
     <input type="submit" value="Claim This Job" />
 }
-<p>@Html.ActionLink("Back to list", "Index")</p>
+@*<p>@Html.ActionLink("Back to list", "Index")</p>*@
 
 @*Job Can be assigned to worker*@
