--- a/src/MrFixIt/Views/Jobs/Index.cshtml
+++ b/src/MrFixIt/Views/Jobs/Index.cshtml
@@ -16,7 +16,8 @@
         </ul>
         @if (Job.Worker == null)
         {
-        <li class="btn">This job is unclaimed. @Html.ActionLink("Claim This Job", "Claim", new { @text = @Job.Title, id = Job.JobId })</li>
+        <li class="btn claims" data-request-url="@Url.Action("Claim", new { @text = @Job.Title, id = Job.JobId })">This job is unclaimed. click to claim</li>
+        
         }
         else
         {
@@ -24,7 +25,7 @@
 
         }
     </ul>
-
+    <div id="result"></div>
 
     <hr />
 }
