fixed claim job ajax call

--- a/src/MrFixIt/Views/Jobs/Index.cshtml
+++ b/src/MrFixIt/Views/Jobs/Index.cshtml
@@ -17,7 +17,7 @@
         @if (Job.Worker == null)
         {
 
-            <li class="btn claims">This job is unclaimed. @Html.ActionLink("Claim This Job", "Claim", new { @text = @Job.Title, id = Job.JobId })</li>
+            <li class="btn claims" id="@Job.JobId">This job is unclaimed.</li>
 
         @*<li class="btn claims" data-request-url="@Url.Action("Claim", new { @text = @Job.Title, id = Job.JobId })">This job is unclaimed. click to claim</li>*@
         
